--- a/source/frontend/package.json
+++ b/source/frontend/package.json
@@ -14,7 +14,8 @@
     "react-redux": "7.2.2",
     "react-router": "5.2.0",
     "react-router-config": "5.1.1",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "axios": "^0.27.2"
   },
   "scripts": {
     "start": "react-scripts start",
